
  * Bid deleted on PIREP submit
  * PIREP fields properly show in admin panel
  * PIREP fields can be edited
  * Airlines can be enabled/disabled (not deleted)
  * Airline names/ICAO can be changed
  * WYSIWYG editor for News and Pages
  * Default skin tweaks
  * Profile stats back (to be expanded)
  * PIREP submit form fixes
  * Registration code tidied up
  * Admin panel JS error fixed
  * Bug fixes
  
  Notes
  -----
  Run the updater (install/update.php)
 

Build 1.0.361 (RC2)

  * Schedule importer (yay!)
  * CSV Template included 
  * Notes and enabled option field added to schedules
  * PIREPs check for route existence before submitting
  * "Times flown" for schedules now updated on PIREP submit
  * Update script test in this build
  * Some file organization, admin panel skin moved
  * Bug fixes
  
  Notes:
  -----
  * Run the update script in install/update.php
  * IMPORTANT: core_javascript.tpl has been renamed to core_htmlhead.tpl
  		Correct this in your skin if you're not using a default!

Build 356:

  * PIREP fields can have different types (text, textarea, dropdown)
  * Added separate schedule detail page
  * Replaced Google Charts with JS based charting
  * Moved pilot stats
  * Bunch of bug fixes
  
  Notes
  -----
	ALTER TABLE `phpvms_pirepfields` ADD `type` VARCHAR( 25 ) NOT NULL ,
		ADD `options` TEXT NOT NULL ; 


Build 352 "Skoshi Tiger" (RC1)

	* (Admin) Custom fields can now be added into PIREPS
	* (Admin) "View details" link on PIREP
	* Added flight queue/bid feature
	* PIREP report page reorganized, shows additional fields
	* Contact, Live Map removed for now (Will be re-added)

Notes:
	Run the following queries for an update (replace the phpvms_ with
		your table prefix, if it's different)

	CREATE TABLE `phpvms_pirepfields` (
		`fieldid` INT NOT NULL AUTO_INCREMENT ,
		`title` VARCHAR( 25 ) NOT NULL ,
		`name` VARCHAR( 25 ) NOT NULL ,
		PRIMARY KEY ( `fieldid` )
		UNIQUE KEY `name` (`name`)
	) ENGINE = INNODB; 
	