@@ -757,7 +757,7 @@ div.jqi button{
     padding: 0 0 0 4px;
 }
 .ui-tabs-nav:after { /* clearing without presentational markup, IE gets extra treatment */
-    display: block;
+    display: block"lib/skins/crystal/styles.css";
     clear: both;
     content: " ";
 }
@@ -769,7 +769,7 @@ div.jqi button{
 .ui-tabs-nav a, .ui-tabs-nav a span {
     display: block;
     padding: 0 10px;
-    background: url(tab.png) no-repeat;
+    background: url(images/tab.png) no-repeat;
 }
 .ui-tabs-nav a {
     margin: 1px 0 0; /* position: relative makes opacity fail for disabled tab in IE */
@@ -828,7 +828,6 @@ div.jqi button{
     filter: alpha(opacity=40);
 }
 .ui-tabs-panel {
-    border-top: 1px solid #97a5b0;
     padding: 1em 8px;
     background: #fff; /* declare background color for container to avoid distorted fonts in IE while fading */
 }
