@@ -367,7 +367,7 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 .ui-tabs-nav a, .ui-tabs-nav a span {
     display: block;
     padding: 0 10px;
-    background: url(tab.png) no-repeat;
+    background: url(images/tab.png) no-repeat;
 }
 .ui-tabs-nav a {
     margin: 1px 0 0; /* position: relative makes opacity fail for disabled tab in IE */
@@ -426,7 +426,6 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
     filter: alpha(opacity=40);
 }
 .ui-tabs-panel {
-    border-top: 1px solid #97a5b0;
     padding: 1em 8px;
     background: #fff; /* declare background color for container to avoid distorted fonts in IE while fading */
 }
