@@ -395,7 +395,7 @@ ul.nav li li li.sfHover ul {
 .ui-tabs-nav a, .ui-tabs-nav a span {
     display: block;
     padding: 0 10px;
-    background: url(tab.png) no-repeat;
+    background: url(images/tab.png) no-repeat;
 }
 .ui-tabs-nav a {
     margin: 1px 0 0; /* position: relative makes opacity fail for disabled tab in IE */
@@ -454,7 +454,6 @@ ul.nav li li li.sfHover ul {
     filter: alpha(opacity=40);
 }
 .ui-tabs-panel {
-    border-top: 1px solid #97a5b0;
     padding: 1em 8px;
     background: #fff; /* declare background color for container to avoid distorted fonts in IE while fading */
 }
